# Elbot

./: .cache  .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  How To.txt  INSTALL.md  LICENSE  PERFORMANCE_TUNING.md  README.md  __on_track_exception.txt  bot command  deploy.ps1  deploy.sh  deploy_git_update.sh  deploy_web.sh  docker-compose.yml  elbot-update.service  elbot-update.service.template  elbot-update.timer  elbot-web.service  elbot-web.service.template  elbot.service  elbot.service.template  install.sh  lavalink.service  main.py  pyproject.toml  remove_duplicate_def.py  requirements.txt  sudo apt update.txt  test.sh  youtube_cookies.txt
.claude/: launch.json  settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  lint.yml
chat_history/: 377500611442245632.json
cogs/: F1.py  chat - Copy  chat.py  dalle.py  diagnostic.py  f1.py  help.py  localization.py  moderation.py  music.py  nlp_commands.py  pingptest.py
docs/: INSTALLATION.md
elbot/: __init__.py  auto_lavalink.py  config.py  main.py  patch_nextcord.py  portal.py  service_install.py  utils.py  win_service.py
elbot/audio/: lavalink_client.py  mafic_compat.py  ytdlp_helper.py
elbot/music/: __init__.py  audio_backend.py  diagnostics.py  fallback.py  queue.py
elbot/static/: style.css
elbot/templates/: base.html  index.html  logs.html
infra/docker/: docker-compose.yml
infra/docker/lavalink/: application.yml
infra/scripts/: deploy.sh  install.ps1  install.sh  run.ps1  run.sh  uninstall.sh
infra/systemd/: elbot.service  lavalink.service
lavalink/: application.yml
locales/: en.json  es.json
scripts/: canary_playback.py  check_no_private_data.sh  install.sh  lavalink.service  lavalink.sh  provision.sh  run.ps1  run.sh  uninstall.sh  update.sh
src/elbot/: __init__.py  auto_lavalink.py  cli.py  config.py  main.py  patch_nextcord.py  portal.py  service_install.py  utils.py  win_service.py
src/elbot/cogs/: F1.py  __init__.py  admin.py  ai.py  chat.py  dalle.py  diagnostic.py  moderation.py  music.py  speech.py  utility.py  voice_chat.py
src/elbot/core/: auto_update.py  auto_update_job.py  deploy.py  docker_tasks.py  env_tools.py  network.py  ops.py  prerequisites.py  runtime.py  (+1 more)
src/elbot_portal/: __init__.py  app.py
static/css/: dark.css  futuristic.css  light.css
tests/: conftest.py  test_auto_lavalink.py  test_chat.py  test_cli_install.py  test_config.py  test_core_auto_update.py  test_core_auto_update_job.py  test_core_env_tools.py  test_core_network.py  test_core_prerequisites.py  test_core_runtime.py  test_core_service_and_docker.py  test_f1.py  test_main.py  test_moan.py  test_music_connect.py  test_music_cookie.py  test_music_cookies.py  test_music_fallback.py  test_music_queue.py  test_music_queue_utils.py  test_music_unload.py  test_portal.py  test_service_install.py  test_utils.py
web/: app.py
web/templates/: analytics.html  index.html  login.html  logs.html
(+21 files in other folders)
