[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "elbot"
version = "0.1.0"
description = "A modular Discord bot using Nextcord and OpenAI."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Elbot Team"}]
license = {text = "MIT"}
dependencies = [
    "nextcord>=2.6",
    "PyNaCl>=1.5.0",
    "openai",
    "textblob",
    "python-dotenv>=1.0.1",
    "platformdirs>=4.2",
    "psutil",
    "mafic>=2.10.1",
    "yt-dlp>=2025.9.4",
    "Flask",
    "icalendar",
    "aiohttp",
    "cachetools",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "nextcord",
    "aiohttp[speedups]",
    "pytest-asyncio",
]

[project.scripts]
elbot = "elbot.main:main"
elbot-portal = "elbot.portal:main"
elbot-install-service = "elbot.service_install:main"
elbotctl = "elbot.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
elbot = [
    "templates/*.html",
    "static/*",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["elbot*"]



